test/lexer/error.2.err
INVALID_TOKEN[1000] in test/lexer/error.2.pytch, line 1, character 11:
Error: Invalid token '`'.
   +---------------------------------------+
   | test/lexer/error.2.pytch              |
 1 | let foo = `print(1)                   |
   |           ^ Error: Invalid token '`'. |
   +---------------------------------------+
